update uploads fileds
