# src/controllers/file_controller.js
@@ -23,11 +23,12 @@ const saveOneFile = async (req, res, next) => {
 
     const acteur = req.session.e_acteur;
     const typedoc_intitule = req.params.intitule;
-    const nom_fichier = `${req.protocol}://${req.get('host')}/api/bambckoff/uploads/${req.file.filename}`;
+    const nom_fichier = req.body.nom_fichier;
+    const chemin_fichier = `${req.protocol}://${req.get('host')}/api/bambckoff/uploads/${req.file.filename}`;
 
     await TypeDocument.findByIntitule(typedoc_intitule).then(async typedoc => {
         if(!typedoc) return response(res, 404, `Le type document '${typedoc_intitule}' introuvable !`);
-        await Document.create({acteur_id: acteur, type_document: typedoc.r_i, nom_fichier}).then(async document => {
+        await Document.create({acteur_id: acteur, type_document: typedoc.r_i, nom_fichier, chemin_fichier}).then(async document => {
             document['type_document'] = typedoc.r_intitule;
             delete document.e_type_document
             return response(res, 201, `Uploads terminé`, document);
